deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-admission
  name: kube-admission
  namespace: default
spec:
  selector:
    app: kube-admission
  type: ClusterIP
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8080
