deploy/manifests/admissionregistration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "pod-policy.kube-admission.io"
webhooks:
- name: "pod-policy.kube-admission.io"
  rules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE"]
      resources:   ["pods"]
      scope:       "Namespaced"
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZTVENDQXpHZ0F3SUJBZ0lVUXFmdmkzVU5JbEwzdDl3c2V0VFJtSnFNM1ljd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dERVdNQlFHQTFVRUF3d05LaTVrWldaaGRXeDBMbk4yWXpBZUZ3MHlNVEV5TVRVd09UTTBNelZhRncwegpNVEV5TVRNd09UTTBNelZhTUJneEZqQVVCZ05WQkFNTURTb3VaR1ZtWVhWc2RDNXpkbU13Z2dJaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUNEd0F3Z2dJS0FvSUNBUURBS1hRQldFREMvNHA3dmxwMFRTay8rQWhhb2N2S2RQVVgKUmMwZ2lCUlhnODk4a0k5cFVqOURtVVYxMnZSVGlYVkZRYUFGWldvTWhMaWdINWFYZTYzSkxJODJWYVZXRmw3dwpaazFCMnFuYlAwcn [...]
    service:
      namespace: "default"
      name: "kube-admission"
      path: /always-allow-delay-5s
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 10
